Basic layout commit

--- a/index.html
+++ b/index.html
@@ -1,10 +1,49 @@
+<!DOCTYPE html>
 <html>
+  <header>
+    <div class="logo">
+      <h1>Jun's Blog</h1>
+    </div>
+    <nav>
+      <ul>
+        <li>
+          <a
+            href="file:///Users/jun/devacademy/minjun-choi-24.github.io/index.html"
+            >Home</a
+          >
+        </li>
+        <li>
+          <a
+            href="file:///Users/jun/devacademy/minjun-choi-24.github.io/blog/te-houtaewa-template.html"
+            >Te Houtaewa</a
+          >
+        </li>
+        <li><a href="contact.html">Contact</a></li>
+      </ul>
+    </nav>
+  </header>
+
   <head>
-    <title>My blog</title>
+    <title>Jun's Blog</title>
+    <link href="styles/main.css" rel="stylesheet" type="text/css" />
+
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
   </head>
   <body>
-    <h1>Kia ora Taiao! (Hello World!)</h1>
-    <p>This is the beginning of my website home page.</p>
-    <p>It will eventually contain a list of links to all my blogs.</p>
+    <h1>Thanks for visiting my blog!</h1>
+    <h2>Tech Blogs</h2>
+
+    <div class="container">
+      <div class="item">Item 1</div>
+      <div class="item">Item 2</div>
+      <div class="item">Item 3</div>
+    </div>
+
+    <h2>Human Skills Blogs</h2>
+    <div class="container">
+      <div class="item">Item 1</div>
+      <div class="item">Item 2</div>
+      <div class="item">Item 3</div>
+    </div>
   </body>
 </html>
