--- a/index.html
+++ b/index.html
@@ -7,14 +7,10 @@
     <nav>
       <ul>
         <li>
-          <a
-            href="file:///Users/jun/devacademy/minjun-choi-24.github.io/index.html"
-            >Home</a
-          >
+          <a href="minjun-choi-24.github.io/index.html">Home</a>
         </li>
         <li>
-          <a
-            href="file:///Users/jun/devacademy/minjun-choi-24.github.io/blog/te-houtaewa-template.html"
+          <a href="minjun-choi-24.github.io/blog/te-houtaewa-template.html"
             >Te Houtaewa</a
           >
         </li>
