maybe correct url

--- a/index.html
+++ b/index.html
@@ -7,12 +7,10 @@
     <nav>
       <ul>
         <li>
-          <a href="minjun-choi-24.github.io/index.html">Home</a>
+          <a href="index.html">Home</a>
         </li>
         <li>
-          <a href="minjun-choi-24.github.io/blog/te-houtaewa-template.html"
-            >Te Houtaewa</a
-          >
+          <a href="blog/te-houtaewa-template.html">Te Houtaewa</a>
         </li>
         <li><a href="contact.html">Contact</a></li>
       </ul>
