--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <h2>Tech Blogs</h2>
 
     <div class="container">
-      <div class="item">Item 1</div>
+      <div class="item"><a href="blog/html-css.html">CSS</a></div>
       <div class="item">Item 2</div>
       <div class="item">Item 3</div>
     </div>
