uploaded two cultural blogs

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <li>
           <a href="blog/te-houtaewa-template.html">Te Houtaewa</a>
         </li>
-        <li><a href="contact.html">Contact</a></li>
+        <li><a href="blog/contact.html">Contact</a></li>
       </ul>
     </nav>
   </header>
@@ -28,15 +28,19 @@
     <h2>Tech Blogs</h2>
 
     <div class="container">
-      <div class="item"><a href="blog/html-css.html">CSS</a></div>
+      <div class="item"><a href="blog/html-css.html">CSS-Research</a></div>
       <div class="item">Item 2</div>
       <div class="item">Item 3</div>
     </div>
 
     <h2>Human Skills Blogs</h2>
     <div class="container">
-      <div class="item">Item 1</div>
-      <div class="item">Item 2</div>
+      <div class="item">
+        <a href="blog/learning-plan.html">Learning-Plan</a>
+      </div>
+      <div class="item">
+        <a href="blog/identity-values.html">identity-values</a>
+      </div>
       <div class="item">Item 3</div>
     </div>
   </body>
