added js fundamental blog

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
     <div class="container">
       <div class="item"><a href="blog/html-css.html">CSS-Research</a></div>
-      <div class="item">Item 2</div>
+      <div class="item"><a href="blog/javascript-dom.html">JS Fundamental</a></div>
       <div class="item">Item 3</div>
     </div>
 
@@ -41,7 +41,8 @@
       <div class="item">
         <a href="blog/identity-values.html">identity-values</a>
       </div>
-      <div class="item">Item 3</div>
+      <div class="item">
+        <a href="blog/emotional-intelligence.html">emotional-intelligence</a>
     </div>
   </body>
 </html>
