--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <div class="container">
       <div class="item"><a href="blog/html-css.html">CSS-Research</a></div>
       <div class="item"><a href="blog/javascript-dom.html">JS Fundamental</a></div>
-      <div class="item">Item 3</div>
+      <div class="item"><a href="blog/problem-solving.html">Problem Solving</a></div>
     </div>
 
     <h2>Human Skills Blogs</h2>
