completed human skills reflection

--- a/index.html
+++ b/index.html
@@ -44,5 +44,8 @@
       <div class="item">
         <a href="blog/emotional-intelligence.html">emotional-intelligence</a>
     </div>
+      <div class="item">
+        <a href="blog/foundations-reflection.html">Human-Skills</a>
+    </div>  
   </body>
 </html>
