added wellbeing plan and neuroplasticity

--- a/index.html
+++ b/index.html
@@ -43,7 +43,13 @@
       </div>
       <div class="item">
         <a href="blog/emotional-intelligence.html">emotional-intelligence</a>
-    </div>
+      </div>
+      <div class="item">
+        <a href="blog/neuroplasticity.html">Neuroplasticity</a>
+      </div>
+      <div class="item">
+        <a href="blog/te-whare-tapa-wha.html">Well-Being Plan</a>
+      </div>
       <div class="item">
         <a href="blog/foundations-reflection.html">Human-Skills</a>
     </div>  
